Fixed some bugs, made sure site looks good on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar-brand {
+#navbartext {
   color: #333;
 }
 
