--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,6 +6,7 @@ p {
 
 .footerContainer {
   position: absolute;
+  left: 0;
   width: 100%;
   height: 60px;
 }
